# OS_labs

./: .gitignore  CMakeLists.txt  Makefile  a  config.yaml  config_cycle.yaml  config_disconnected.yaml  config_ids.yaml
CP8/: CMakeLists.txt  main.cpp
CP8/docs/: CP8.docx
CP8/include/: cp8_utils.h  tools.h
CP8/src/: cp8_utils.cpp  tools.cpp
LW1/: CMakeLists.txt  main.c
LW1/docs/: 1.docx  lab1.docx
LW1/include/: lab1.h
LW1/src/: divergent.c  lab_1_utils.c
LW2/: CMakeLists.txt  main.c
LW2/docs/: 2.docx  lab2.docx
LW2/include/: lab2.h
LW2/src/: lab_2_utils.c
LW3/: CMakeLists.txt  main.c
LW3/docs/: 3.docx  lab3.docx
LW3/include/: child.h  lab3.h  parent.h  utils.h
LW3/src/: child.c  parent.c  utils.c
LW4/: CMakeLists.txt  dynamic.c  static.c
LW4/docs/: 4.docx  lab4.docx
LW4/include/: libmath1.h  libmath2.h
LW4/src/: libmath1.c  libmath2.c
LW5-7/: CMakeLists.txt  main.c  mock_main.c
LW5-7/docs/: 5-7.docx  lab5-7.docx
LW5-7/include/: comp_utils.h  manage_node.h  node.h  tree.h  upcoming_operations.h
LW5-7/src/: calc_node.c  manage_node.c  tree.c  upcoming_operations.c
LW8/: Lab-8.odt
LW8/docs/: lab8.docx
tests/: CMakeLists.txt  cp8_test.cpp  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5-7_test.cpp
